# blacksmith

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.cpp  requirements.txt
python/: main.py  reduction.py  resnet.py
python/blacksmith/: __init__.py  ir.py
src/: blacksmith.cpp  ir.cpp
src/fuser/: fuse.cpp  fuse.h  fuse_analysis.cpp  fuse_analysis.h  fuse_autotuner.h  fuse_codegen.h  fuse_schedule.h  fuse_segment.h
src/ir/: fusion_graph.cpp  fusion_graph.h  ir.cpp  ir.h  node_def.h  op_def.cpp  op_def.h  target_def.cpp  target_def.h  tensor_node_def.h
src/metal/kernels/: invoke.cpp  matmul.metal
src/source_gen/: gen.cpp  gen.h
src/utils/: fx_utils.cpp  fx_utils.h  node_def.h  op_class.h  op_def.cpp  op_def.h  parse.cpp  parse.h  registered_ops.h
test/: run_source_gen.sh  test.md
test/metal/kernels/: Makefile  add.metal  invoke.cpp  matmul.metal
